# Movie-Recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/: config.py  main.py  models.py  router.py
api/core/: logging.py
data/: cleaned_data.csv  data_sample.csv  encoded_data.csv  genre_df.csv  numeric_data.csv  numeric_scaled.npy  title_to_index.json
data/index/: title_to_index.json
data/raw/: cleaned_data.csv  numeric_data.csv
notebooks/: data_analysis.ipynb  model.ipynb  visualization.ipynb
recommender/: build_index.py  recommender.py
scripts/: build_index.py  evaluate_ann.py  test.py  text_cleaner.py
tests/: evaluate_ann.py
