[project]
name = "movie-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pynndescent>=0.5.13",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
]
